<resources>
    <string name="app_name">CSCB07 Project</string>
    <!-- welcome page -->
    <string name="customer_button">Customer</string>
    <string name="storeOwner_button">Store Owner</string>
    <!-- login, register page -->
    <string name="email">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="registertext">To register an account, click here.</string>
    <string name="createAccount_button">Create new account</string>
    <string name="emptytext"></string>
    <string name="storename">Store Name</string>
    <string name="storedescription">Store Description</string>
    <!-- main menu: store owners -->
    <string name="add_product">Add a Product</string>
    <!-- add/edit a product form -->
    <string name="productname">Product Name</string>
    <string name="productdescription">Product Description</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="unit">Unit Type</string>
    <string name="publish_button">Publish Product</string>
    <string name="productname_hint">Enter Product Name</string>
    <string name="productdescription_hint">Enter Description(Brand)</string>
    <string name="price_hint">Enter Price</string>
    <string name="quantity_hint">Enter Quantity</string>
    <string name="unit_hint">(e.g. lbs, kg, litres)</string>
    <string name="republish_button">Republish Product</string>
    <string name="delete_product">Delete Product</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Quan">"Please enter the quantity"</string>

</resources>